--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,3 +3,9 @@ h1, h2, h3, h4, h5 {
   font-weight: 700;
   font-style: normal;
 }
+
+body {
+  font-family: brandon-grotesque, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
