--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -9,3 +9,47 @@ body {
   font-weight: 300;
   font-style: normal;
 }
+
+$border: 1px solid #ced4da;
+
+select {
+  display: inline-block;
+  /*
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: 700;
+  */
+  color: #444;
+  line-height: 1.3;
+  padding: .6em 1.4em .5em .8em;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: $border;
+  border-radius: 4px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+select:hover {
+  border-color: #888;
+}
+
+select:focus {
+  border-color: #aaa;
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, .3);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222;
+  outline: none;
+}
+
+select option {
+  font-weight:normal;
+}
