Add About and Media pages

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -10,6 +10,12 @@ body {
   font-style: normal;
 }
 
+strong {
+  font-family: brandon-grotesque, sans-serif;
+  font-size: 1.2em;
+  font-weight: 700;
+}
+
 $border: 1px solid #ced4da;
 
 select {
