Add contact form

--- a/res/assets/styles/_formatting.scss
+++ b/res/assets/styles/_formatting.scss
@@ -10,6 +10,10 @@ h1, h2, h3, h4, h5 {
   font-style: normal;
 }
 
+h1 {
+  margin-bottom: .4em;
+}
+
 strong {
   font-family: brandon-grotesque, sans-serif;
   font-size: 1.2em;
