--- a/res/assets/styles/_formatting.scss
+++ b/res/assets/styles/_formatting.scss
@@ -14,6 +14,10 @@ h1 {
   margin-bottom: .4em;
 }
 
+h2, h3, h4, h5 {
+  margin: 1em 0 0.5em;
+}
+
 strong {
   font-family: brandon-grotesque, sans-serif;
   font-size: 1.2em;
