--- a/res/assets/styles/_variables.scss
+++ b/res/assets/styles/_variables.scss
@@ -1,4 +1,5 @@
 $grey-light: #f0f4f5;
+$grey-button: #f4f4f5;
 $blue-dark: #1660A6;
 $border-light: 1px solid #ced4da;
 $display-font: brandon-grotesque, sans-serif;
