--- a/assets/styles/_responsive.scss
+++ b/assets/styles/_responsive.scss
@@ -1,15 +1,11 @@
-[class*="only-"] {
-  display: none;
-}
-
-@media only screen and (min-width: 600px) {
-  .only-lg {
-    display: block;
+@media only screen and (max-width: 600px) {
+  .hide-sm {
+    display: none !important;
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .only-sm {
-    display: block;
+@media only screen and (min-width: 600px) {
+  .hide-lg {
+    display: none !important;
   }
 }
