Tweak SCSS variables

--- a/assets/styles/_formatting.scss
+++ b/assets/styles/_formatting.scss
@@ -47,7 +47,7 @@ strong {
     color: #000000;
 
     &.router-link-exact-active {
-      color: $blue-dark;
+      color: $primary-color;
       text-decoration: none;
     }
   }
