--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,5 +1,6 @@
 $grey-light: #f0f4f5;
 $grey-button: #f4f4f5;
-$blue-dark: #1660A6;
+$primary-color: #1660A6;
+//$primary-color: #168FA6;
 $border-light: 1px solid #ced4da;
 $display-font: brandon-grotesque, sans-serif;
