--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -4,3 +4,4 @@ $primary-color: #1660A6;
 //$primary-color: #168FA6;
 $border-light: 1px solid #ced4da;
 $display-font: brandon-grotesque, sans-serif;
+$dark-red: #df0f1b;
